changes to pipline files so they will use java 17 and Junit 5